--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+# Dependencies
+/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,32 +8,44 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
-
-# next.js
+# Next.js
 /.next/
 /out/
+.next/cache/
 
-# production
+# Production
 /build
+.next/cache/
 
-# misc
-.DS_Store
-*.pem
+# Environment variables
+.env*
+!.env.example
 
-# debug
+# Database
+/prisma/migrations/
+/prisma/*.db
+/prisma/*.db-journal
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Editor/IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
 
-# vercel
-.vercel
+# Testing
+/coverage/
+/junit.xml
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Vercel
+.vercel/
