--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.7.0",
     "bcryptjs": "^3.0.2",
